solved image not showing on what are we doing

--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@
     height: 60px;
 }
 
-.top>img {
+/* .top>img {
     height: 60px;
-}
+} */
 
 .topbar {
     background-color: rgb(49, 109, 195);
